--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.02.2022 13:52:08</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.02.2022 06:09:21</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Úterý, 15. 02. 2022</h5>
+<h5>Středa, 16. 02. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Farmářská</strong>
@@ -50,54 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Úterý 15.2.2022</div>
+<div class="nadpis">Středa 16.2.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Malinovo-vanilkový tvaroh s piškotem a čokoládovou drobenkou </div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Brownie</div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Linecký koláč s tvarohem a lesním ovocem</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Bavorské bagety dle denní nabídky</div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Kukuřičný krém, kuřecí maso, chilli samostatně  <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Kukuřičný krém, kuřecí maso, chilli v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Hovězí stroganov, basmati rýže, smetana, kerblík <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>350g Caesar salát s kuřecím masem, opečená slanina, krutony parmazán   <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Ryby">4</em><em title="Mléko">7</em><em title="Celer">9</em><em title="Hořčice">10</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>350g Wrap s grilovaným sýrem halloumi a pečenou zeleninou, míchaný zeleninový salát <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -108,22 +63,22 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s paprikovou klobásou</td><td class="menuPrice">39,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Ruský boršč s naší šlehačkou</td><td class="menuPrice">39,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Předkrm </h5><tr><td class="menuWeight">150g</td><td class="menuName">Gothajský salám z Maso Jičín s cibulí, octem a feferonkou, kváskový chléb</td><td class="menuPrice">49,-</td></tr></tbody>
+<h5 class="border_box_title">  Předkrm </h5><tr><td class="menuWeight">150g</td><td class="menuName">Gothajský salám z Maso Jičín s cibulí, octem a feferonkou, kváskový chléb</td><td class="menuPrice">49,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Ve středu budou opět naše oblíbené koláče </td><td class="menuPrice">22,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Těstoviny linguine s bolonským ragú, strouhaný sýr</td><td class="menuPrice">119,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí roštěná na houbách, dušená jasmínová rýže</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočka na kyselo, uzená kýta na grilu, volské oko, kyselá okurka</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava:  150g Dorůžova pečená vepřová panenka, grilovaná zelenina, brokolicové pyré, vařené vejce</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos  s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený květák, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí nudličky po sečuánsku s čerstvou zeleninou a chilli, smažené bramborové hranolky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová panenka v listovém těstě s listovým špenátem, bramborová kaše, grilovaná karotka</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát s trhanými listy s majonézovým dresinkem, kuřecí stripsy, vařené vejce, parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">1+1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">2+1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">1ks</td><td class="menuName">Pečený kynutý koláč s naší banánovou marmeládou a tvarohem</td><td class="menuPrice">22,-</td></tr><tr><td class="menuWeight">1ks</td><td class="menuName">Pečený kynutý koláč s tvarohem, meruňkou a borůvkami</td><td class="menuPrice">22,-</td></tr><tr><td class="menuWeight">TOP</td><td class="menuName">Medailonky z kuřecích prsou v bramboráku (5 ks), salát coleslav</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Myslivecká hovězí pečeně, kynuté houskové knedlíky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené plátky vepřového bůčku na česneku, bramborové knedlíky, špenát</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na grilu, smažené bramborové hranolky, tatarka</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Steak z krůtích prsou gratinovaný mocarellou a rajčaty s bazalkovým pestem, lehký jarní salát (brokolice, květák, hořčice, majonéza, cibule, sýr, čerstvá okurka a rajče)</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos piva s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené kuře na másle, žemlová nádivka, vařené brambory s petrželkou</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nudličky z kuřecích prsou na jemné omáčce z kari s kokosovým mlékem, bambusovými plátky a pórkem, dušená jasmínová rýže</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Steak z vepřové kotlety bez kosti na smetanové omáčce se sušenými rajčaty, pórkem a kukuřicí, špecle</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Biftek z pravé hovězí svíčkové se sázeným vejcem na šunce, smažené bramborové hranolky</td><td class="menuPrice">229,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný majonézovým dresinkem, filírovaná vepřová panenka, vařené vejce, parmazán</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">2+1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">1+1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -168,7 +123,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 </tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Pikantní hovězí PHO s koriandrem a chilli s vaječnými nudlemi 1a,3,6,9</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">200g</td><td class="title">Pečený vepřový bůček po thajsku s wasabi bramborovým pyré a restovanou hlívou ústřičnou 1a,6,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hovězí burger s ledovým salátem, anglickou slaninou, rajčetem, nakládanou okurkou, cibulí a bbq majonézou s hranolky 1a,3,7,10,11</td><td class="pricem">149 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Zapečené francouzské brambory s uzenou krkovičkou a vejci se salátem z červené řepy 3,7</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Zelná s klobásou a zakysanou smetanou 1a,7,12</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">1/4</td><td class="title">Pečené kachní stehno s červeným zelím, našimi bramborovými knedlíky a vídeňskou cibulí 1a,3,12</td><td class="pricem">149 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Gratinovaný vepřový steak sýrovou cibulovou krustou se zelenými fazolkami s anglickou slaninou a mačkanými brambory 1a,3,7</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">350g</td><td class="title">Variace trhaný salátů s grilovaným sýrem Halloumi, cherry rajčaty, okurkou, mrkví, balsamicovým rybízovým octem a rozpečenou bylinkovou bagetou 1a,3,7,10</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
