--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.02.2022 08:33:36</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.02.2022 09:12:03</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,42 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Středa 16.2.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Mrkvový dort</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Brownie</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Luštěninová polévka s kořenovou zeleninou samostatně <em title="Celer">9</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Luštěninová polévka s kořenovou zeleninou v menu <em title="Celer">9</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Kuřecí roláda se špenátem a vajíčkem, pyré z pečeného květáku, ředkvičkový salát, polníček <em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Grilovaná vepřová krkovice, cibulové chutney, opečený brambor, pažitka</div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Vaječná fritatta, restovaný pórek, brokolice, mozzarella, tomatový kuskus</div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -131,7 +166,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s citronem a omackou tahini, jahlový salát se zeleninou, bylinkami a mungo klicky 139</li><li>Peceny filet z cerstveho norskeho lososa s citronem a omackou tahini jahlový salát se zeleninou, bylinkami a mungo klicky  169</li><li>Korejske restovane veprove nudličky s miso, sezamem a cesnekem, ryzove nudle, mrkvove cukemono s ananasem a chilli 139</li><li>Wrap s hovezim pastrami, rajcaty, pekingskym zelim a avokadovym jogurtem, pecene brambory, salatek {L} 169</li><li>Indicke kvetakove kari s cizrnou, rajcaty, kokosovym mlekem a zazvorem, chlebove placky {L} 139</li></ol>
+<ol><li>Peceny filet z norskeho slede s pecenymi rajcaty a dresinkem z celozrnne horcice, kuskus s cervenymi fazolemi, salatek {L} 139</li><li>Posirovany filet z uzene bile tresky s holandskou omackou s kaparami, stouchane brambory s porkem, salatek 169</li><li>Kruti medailonky po jihoindicku v citronove omacce se zazvorem a kokosovym mlekem, jasminova ryze, salatek 139</li><li>Smazeny sekany teleci rizek s goudou a spetkou muskatu, stouchane brambory s porkem, mrkvovy salat s ananasem, citron {L} 169</li><li>Ratatouille z pecene zeleniny s grilovanym halloumi, kuskus s cervenymi fazolem, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
